# cleanup-crew

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: iam-policy.json  index.html
src/awscleanup/: __init__.py  aws_session.py  cli.py  config.py  models.py  report.py  state.py
src/awscleanup/scanners/: __init__.py  base.py  ebs_snapshots.py  ebs_volumes.py  ec2_instances.py  elastic_ips.py  load_balancers.py  security_groups.py  tags.py
src/awscleanup/templates/: report.html.jinja
tests/: conftest.py  test_cli.py
tests/scanners/: test_ebs_snapshots.py  test_ebs_volumes.py  test_ec2_instances.py  test_elastic_ips.py  test_load_balancers.py  test_security_groups.py
