[project]
name = "cleanup-crew"
version = "0.1.0"
description = "Scan AWS for unused resources, confirm, and clean them up safely."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sdaniel" }]

dependencies = [
    "boto3>=1.34",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
]

[project.scripts]
cleanup-crew = "awscleanup.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto[ec2,elb,elbv2]>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awscleanup"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
